# iris-webapp

./: .gitignore  LICENSE  README.md
.github/: frontend-merge.yml
.github/workflows/: backend.yml  frontend-merge.yml  frontend.yml
backend/: CMakeCache.txt  CMakeLists.txt  build.sh  get_sources.sh
backend/src/: iris-backend.cpp  iris-backend.h  iris-bind.cpp
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/api/: iris.wasm
frontend/iris/: package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/iris/api/: iris.cbp  iris.js  iris.wasm
frontend/iris/src/: App.js  App.tsx  index.css  main.js  main.tsx
frontend/iris/src/components/ChainSelectionButtons/: ChainSelectionButtons.js  ChainSelectionButtons.tsx
frontend/iris/src/components/Information/: Information.js  Information.tsx
frontend/iris/src/components/Iris/: Iris.js  Iris.tsx
frontend/iris/src/components/Loading/: Loading.js
frontend/iris/src/components/RingKnurling/: RingKnurling.js  RingKnurling.tsx
frontend/iris/src/components/Submit/: Submit.tsx
frontend/iris/src/components/Upload/: Upload.js  Upload.tsx  UploadButton.js
frontend/iris/src/data/: Constants.js  Constants.tsx
frontend/iris/src/functions/: circle_functions.js  circle_functions.ts  circle_test_functions.js  circle_test_functions.ts  data_manipulation.js  data_manipulation.ts  test_data.js  test_data.ts
frontend/iris/src/interface/: interface.ts
frontend/iris/src/layouts/: BorderElement.js  BorderElement.tsx  Footer.js  Header.js  Header.tsx  NavBar.js  NavBar.tsx
frontend/iris/src/pages/: Home.js  Home.tsx
frontend/iris/src/utils/: fetch_from_pdb.js  fetch_from_pdb.ts
frontend/public/: .htaccess
frontend/src/: App.tsx  index.css
frontend/src/api/: iris-api.js  iris-api.wasm  iris.wasm
frontend/src/components/ChainSelectionButtons/: ChainSelectionButtons.tsx
frontend/src/components/Iris/: Iris.tsx
frontend/src/components/PDBFetch/: PDBFetch.tsx
frontend/src/components/RingKnurling/: RingKnurling.tsx
frontend/src/components/Submit/: Submit.tsx
frontend/src/components/Upload/: Upload.tsx  UploadButton.tsx
frontend/src/functions/: circle_test_functions.ts
frontend/src/interface/: interface.ts
frontend/src/layouts/: Footer.tsx  Header.tsx
frontend/src/pages/: Home.tsx
tests/: test_core.py
tests/test_data/: 5fjj.fasta
